# hireintel_ai

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  API_README.md  COMPARING_NO_LLM_APPROACHES.md  Dockerfile  README.md  batch_extract_resumes.py  convert_to_pdf.py  implementation_plan.md  implementation_plan_1.md  implementation_plan_input.md  new_plan_walkthrough.md  pyproject.toml  requirements.prod.txt  requirements.txt  requirements_api.txt  resume_descriptions.md  score_batch_composed.py  scoring_run_log.txt  scratch_diag.py  task.md  walkthrough.md  walkthrough_2.md
baseline/: evaluate_all_baselines.py
docs/: 01_PROJECT_OVERVIEW.md  02_WORKING_LOGIC.md  03_CURRENT_PROGRESS.md  06_RESUME_EXTRACTION_JSON_SCHEMA.md  07_SPECIAL_GUIDE_PDF_RESUME_TO_JSON.md  08_JSON_QUALITY_AUDIT_SPEC.md  08_RETRIEVAL_STRATEGY_SPEC.md  09_CHUNKING_AND_METADATA_SPEC.md  09_DATABASE_SCHEMA.md  10_END_TO_END_PIPELINE.md  10_RETRIEVAL_STRATEGY_SPEC.md  14_MODEL_REGISTRY.md  15_PROMPT_LIBRARY.md  16_DECISIONS.md  17_ARCHITECTURE_CHANGELOG.md  18_DECISIONS.md  18_EVALUATION.md  18_RELEASE_NOTES.md  19_TROUBLESHOOTING.md  20_DECISIONS.md  21_ARCHITECTURE_CHANGELOG.md  21_CODEBASE_MAP.md  22_RELEASE_NOTES.md  23_TROUBLESHOOTING.md  24_ENVIRONMENT_NOTES.md  26_PERFORMANCE_REPORT.md  27_CLOUD_DEPLOYMENT.md  AI_ARCHITECTURE.md  AI_DESIGN_RATIONALE.md  ARCHITECTURE_CHANGELOG.md  CURRENT_PROGRESS.md  DECISIONS.md  EVALUATION.md  IMPLEMENTATION_ROADMAP.md  MODEL_REGISTRY.md  PROJECT_OVERVIEW.md  PROMPT_LIBRARY.md  RECRUITER_WORKFLOWS.md  RELEASE_NOTES.md  (+4 more)
scripts/: run_audit.py  (+35 more)
(+410 files in other folders)
